feat: Configure production builds for xsearch fork
- Enable container builds and releases for all forks
- Update branding from searxng to xsearch in Docker images
- Configure GitHub Container Registry pushes for production
- Modify workflow triggers to run on master branch pushes

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: false
 
 permissions:
-  contents: read
+  contents: write
   packages: read
 
 env:
@@ -134,7 +134,7 @@ jobs:
         run: make container.test
 
   release:
-    if: github.repository_owner == 'searxng' && github.ref_name == 'master'
+    if: github.ref_name == 'master'
     name: Release
     runs-on: ubuntu-24.04-arm
     needs:
