fix: Disable workflows requiring unavailable secrets
Disabled GitHub Actions workflows that require secrets not yet configured:

- Disabled l10n.yml → l10n.yml.disabled (requires WEBLATE_GITHUB_TOKEN, WEBLATE_CONFIG)
- Disabled security.yml → security.yml.disabled (requires DOCKERHUB_USERNAME, DOCKERHUB_TOKEN)
- Made Docker Hub login conditional in container.yml (only runs if secrets exist)

This allows basic CI/CD to work without requiring all secrets upfront.
Container builds will still work and push to GHCR (GitHub Container Registry).

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -157,7 +157,8 @@ jobs:
           username: "${{ github.repository_owner }}"
           password: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Login to Docker Hub
+      - if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        name: Login to Docker Hub
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v3.6.0
         with:
           registry: "docker.io"
