--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -157,8 +157,8 @@ jobs:
           username: "${{ github.repository_owner }}"
           password: "${{ secrets.GITHUB_TOKEN }}"
 
-      - if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
+        continue-on-error: true
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v3.6.0
         with:
           registry: "docker.io"
