--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -177,7 +177,7 @@ jobs:
         with:
           registry: "ghcr.io"
           username: "${{ github.repository_owner }}"
-          password: "${{ secrets.GITHUB_TOKEN }}"
+          password: "${{ secrets.GHCR_TOKEN }}"
 
       - name: Login to Docker Hub
         continue-on-error: true
