--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -176,7 +176,7 @@ jobs:
         uses: docker/login-action@c94ce9fb468520275223c153574b00df6fe4bcc9  # v3.7.0
         with:
           registry: "ghcr.io"
-          username: "${{ github.repository_owner }}"
+          username: "${{ secrets.GHCR_USERNAME }}"
           password: "${{ secrets.GHCR_TOKEN }}"
 
       - name: Login to Docker Hub
